--- a/src/components/Landingpage.module.css
+++ b/src/components/Landingpage.module.css
@@ -10,6 +10,16 @@
 	background-image: url("../assets/img/hero-rain.jpg");
 	background-position: center;
 }
+
+.heroimg_shadow {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 50%);
+}
+
 .herotext {
 	position: absolute;
 	margin: 1em;
