--- a/src/components/Landingpage.module.css
+++ b/src/components/Landingpage.module.css
@@ -28,16 +28,19 @@
 	right: 0;
 	height: 100vh;
 	text-align: center;
+	z-index: 10;
 }
 
 h1 {
 	font-size: 5em;
+	color: #dbd9d9;
 }
 
 h2 {
 	font-family: "Roboto", sans-serif;
 	font-weight: 400;
 	font-size: 2em;
+	color: #dbd9d9;
 }
 
 @media (min-width: 768px) {
