--- a/src/components/Landingpage.module.css
+++ b/src/components/Landingpage.module.css
@@ -32,15 +32,21 @@
 }
 
 h1 {
+	margin-top: 0;
 	font-size: 5em;
-	color: #dbd9d9;
+	color: #eee;
 }
 
 h2 {
 	font-family: "Roboto", sans-serif;
 	font-weight: 400;
 	font-size: 2em;
-	color: #dbd9d9;
+	color: #eee
+}
+
+.umbrellaIcon {
+	font-size: 5rem;
+	color: #eee;
 }
 
 @media (min-width: 768px) {
